Final release: generic logo + docs + nginx config cleanup

--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,3 +1,11 @@
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# DEPRECATED: This file is kept for backward compatibility only
+# 
+# Please use one of the following instead:
+#   - default.docker.conf (for Docker nginx container)
+#   - default.host.conf   (for host-installed nginx)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
 server {
     listen 80;
     server_name yemek.example.com;
