--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: .
     container_name: yemek-server
     restart: always
+    env_file:
+      - .env
     environment:
       DATA_DIR: /app/data
     volumes:
@@ -10,7 +12,7 @@ services:
     ports:
       - "8787:8787"
     healthcheck:
-      test: ["CMD-SHELL", "python -c \"import urllib.request; urllib.request.urlopen('http://127.0.0.1:8787/health').read()\""]
+      test: [ "CMD-SHELL", "python -c \"import urllib.request; urllib.request.urlopen('http://127.0.0.1:8787/health')\"" ]
       interval: 30s
       timeout: 3s
       retries: 3
