--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -2,34 +2,26 @@ services:
   server:
     container_name: yemek-server
     build:
-      context: ..
-      dockerfile: server/Dockerfile
-
-    # Default: 8787:8787  (override: PORT_BIND=127.0.0.1:8787:8787)
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "${PORT_BIND:-8787:8787}"
-
     environment:
       - YEMEK_API_KEY
       - PANEL_USER
       - PANEL_PASS
       - PANEL_ALLOWED_IPS
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
-
     restart: unless-stopped
-
     mem_limit: 128m
     cpus: 0.25
-
     read_only: true
     tmpfs:
       - /tmp:size=16m
-
     security_opt:
       - no-new-privileges:true
     cap_drop:
       - ALL
-
     volumes:
       - server_data:/app/data
 
